Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Add comment about default value for TESTDIR.

	* server.c (serve_log): Change "cvslog" to "log".  This
	(accidental, I presume) error had made it impossible for anonymous
	users to run "cvs log".

	* classify.c (sticky_ck): Change to take an finfo argument rather
	than several arguments taken from there.  Cleans up the way the
	calling convention had depended on SERVER_SUPPORT.
	(Classify_File): Change callers.

	* version.c: Change version number to 1.9.17.

	* Version 1.9.16.

	* recurse.c (do_dir_proc): In combining repository and dir, omit
	trailing "/." from repository.
	* sanity.sh (modules3): Adjust test modules3-4 so we test for
	this fix (this is not just cosmetic; the bug prevented the
	"Rebuilding administrative file database" from happening).
	modules2 already tests the "co CVSROOT/modules" usage.

	* checkout.c (checkout_proc): When building top-level CVSADM
	directory, continue the process of walking up the repository one
	more level, rather than putting in the same repository as for the
	first-level directory.
	* sanity.sh: Adjust tests basicb-1b, basicb-9b, modules3-7f,
	toplevel-9, and toplevel-11 to test for this fix.

	(For reference, this takes CVS's text segment from 344460 to
	344140 bytes.  I know, this may seem unimportant, but it is so
	unusual for programs to shrink and I think it is so cool when they
	do without losing functionality/clarity/etc).
	* checkout.c, cvs.h (emptydir_name): New function.
	* checkout.c (checkout, checkout_proc), modules.c (do_module):
	Call it instead of duplicating the code to do that.

	* sanity.sh (basicc): Clean up first-dir at end of test.

Sat Sep  6 09:48:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join): Fix cut and paste error in join-28
	(/home/kingdon/... -> ${TESTDIR}).

	* recurse.c (start_recursion): If there is no CVSADM and no
	subdirectories, give an error.